# transcode

./: CMakeLists.txt  README.md
cmake/Modules/: Findffmpeg.cmake  LibSearchPathDef.cmake  SupportedBoostVersion.cmake
ffmpeg-dev/: README.txt
ffmpeg-dev/include/: inttypes.h
ffmpeg-dev/include/libavutil/: inttypes.h
ffmpeg-dev/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeg-dev/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
java-api/: .project
java-api/src/transcode/: Test.java  Transcode.java  TranscodeJNI.java
src/: flv.cpp  flv.h  transcode.cpp  transcode_wrap.cpp
test/: TestTranscode.cpp
